added video generate endpoint
